# proof_of_time

./: .gitignore  CITATION.md  README.md  SETUP.md  extract_topics.py  future_work.py  offline_agent_prompt.md  pyproject.toml  run_message_limit_sweep.sh
analysis/: README.md  emnlp_topics_dashboard.py
analysis/agent_behavior/: README.md  sample_task_examples_stratified.py
analysis/comprehensive/: REPORT.html  REPORT.md  data_loader.py  generate_plots.py  main.py  plots.py  report_generator.py
analysis/query_analysis/: README.md  analyze_agent_queries.py  correlation_analysis.py
analysis/query_analysis/outputs/: AGENT_QUERY_ANALYSIS.md
benchmarks/award_react/: README.md
benchmarks/citation_react/: README.md
benchmarks/common/: task_config.py
benchmarks/future_work_react/: README.md
benchmarks/sota_forecast/: README.md
data/: pot-best-papers-updated.xlsx
dataset_building/: README.md  generate_award_datasets.py  generate_citation_datasets.py  generate_sota_forecast.py  get_citation_counts.py
huggingface_data/: README.md
inspect/: __init__.py
inspect/award_react/: benchmark.py
inspect/citation_react/: benchmark.py
inspect/common/: __init__.py  prompt_utils.py
inspect/future_work_react/: benchmark.py
inspect/sota_forecast/: README.md  __init__.py  benchmark.py
logs/ablations/: README.md
reports/: emnlp_author_summary.csv  emnlp_benchmark_summary.csv  emnlp_benchmark_yearly.csv  emnlp_domain_summary.csv  emnlp_finetopic_summary.csv  emnlp_topics_summary.csv
scripts/: parse_ablation_logs.py  run_inspect_ablations.py
